src/rgw/driver/rados/rgw_data_sync.cc
@@ -31,7 +31,6 @@
 
 #include "services/svc_zone.h"
 #include "services/svc_sync_modules.h"
-#include "rgw_bucket.h"
 
 #include "include/common_fwd.h"
 #include "include/random.h"
